infrastructures/namespace-based/gke/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-auth-deployment
  namespace: namespace-admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skripsi-auth
  template:
    metadata:
      labels:
        app: skripsi-auth
    spec:
      containers:
      - name: skripsi-auth
        image: vincentsuryakimui/skripsi-auth:040524
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-tenant-deployment
  namespace: namespace-admin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skripsi-tenant
  template:
    metadata:
      labels:
        app: skripsi-tenant
    spec:
      containers:
      - name: skripsi-tenant
        image: vincentsuryakimui/skripsi-tenant:040524
        ports:
        - containerPort: 8003
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-auth-deployment
  namespace: namespace-x
spec:
  replicas: 5
  selector:
    matchLabels:
      app: skripsi-auth
  template:
    metadata:
      labels:
        app: skripsi-auth
    spec:
      containers:
      - name: skripsi-auth
        image: vincentsuryakimui/skripsi-auth:040524
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-tenant-deployment
  namespace: namespace-x
spec:
  replicas: 5
  selector:
    matchLabels:
      app: skripsi-tenant
  template:
    metadata:
      labels:
        app: skripsi-tenant
    spec:
      containers:
      - name: skripsi-tenant
        image: vincentsuryakimui/skripsi-tenant:040524
        ports:
        - containerPort: 8003
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-products-deployment
  namespace: namespace-x
spec:
  replicas: 5
  selector:
    matchLabels:
      app: skripsi-products
  template:
    metadata:
      labels:
        app: skripsi-products
    spec:
      containers:
      - name: skripsi-products
        image: vincentsuryakimui/skripsi-products:040524
        ports:
        - containerPort: 8002
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-wishlist-deployment
  namespace: namespace-x
spec:
  replicas: 5
  selector:
    matchLabels:
      app: skripsi-wishlist
  template:
    metadata:
      labels:
        app: skripsi-wishlist
    spec:
      containers:
      - name: skripsi-wishlist
        image: vincentsuryakimui/skripsi-wishlist:040524
        ports:
        - containerPort: 8004
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-orders-deployment
  namespace: namespace-x
spec:
  replicas: 5
  selector:
    matchLabels:
      app: skripsi-orders
  template:
    metadata:
      labels:
        app: skripsi-orders
    spec:
      containers:
      - name: skripsi-orders
        image: vincentsuryakimui/skripsi-orders:040524
        ports:
        - containerPort: 8001
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-auth-deployment
  namespace: namespace-y
spec:
  replicas: 5
  selector:
    matchLabels:
      app: skripsi-auth
  template:
    metadata:
      labels:
        app: skripsi-auth
    spec:
      containers:
      - name: skripsi-auth
        image: vincentsuryakimui/skripsi-auth:040524
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-tenant-deployment
  namespace: namespace-y
spec:
  replicas: 5
  selector:
    matchLabels:
      app: skripsi-tenant
  template:
    metadata:
      labels:
        app: skripsi-tenant
    spec:
      containers:
      - name: skripsi-tenant
        image: vincentsuryakimui/skripsi-tenant:040524
        ports:
        - containerPort: 8003
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-products-deployment
  namespace: namespace-y
spec:
  replicas: 5
  selector:
    matchLabels:
      app: skripsi-products
  template:
    metadata:
      labels:
        app: skripsi-products
    spec:
      containers:
      - name: skripsi-products
        image: vincentsuryakimui/skripsi-products:040524
        ports:
        - containerPort: 8002
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-wishlist-deployment
  namespace: namespace-y
spec:
  replicas: 5
  selector:
    matchLabels:
      app: skripsi-wishlist
  template:
    metadata:
      labels:
        app: skripsi-wishlist
    spec:
      containers:
      - name: skripsi-wishlist
        image: vincentsuryakimui/skripsi-wishlist:040524
        ports:
        - containerPort: 8004
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skripsi-orders-deployment
  namespace: namespace-y
spec:
  replicas: 5
  selector:
    matchLabels:
      app: skripsi-orders
  template:
    metadata:
      labels:
        app: skripsi-orders
    spec:
      containers:
      - name: skripsi-orders
        image: vincentsuryakimui/skripsi-orders:040524
        ports:
        - containerPort: 8001
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
