infrastructures/namespace-based/gke/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-auth-service
  namespace: namespace-admin
spec:
  selector:
    app: skripsi-auth
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-tenant-service
  namespace: namespace-admin
spec:
  selector:
    app: skripsi-tenant
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-auth-service
  namespace: namespace-x
spec:
  selector:
    app: skripsi-auth
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-tenant-service
  namespace: namespace-x
spec:
  selector:
    app: skripsi-tenant
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-products-service
  namespace: namespace-x
spec:
  selector:
    app: skripsi-products
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-wishlist-service
  namespace: namespace-x
spec:
  selector:
    app: skripsi-wishlist
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-orders-service
  namespace: namespace-x
spec:
  selector:
    app: skripsi-orders
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-auth-service
  namespace: namespace-y
spec:
  selector:
    app: skripsi-auth
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-tenant-service
  namespace: namespace-y
spec:
  selector:
    app: skripsi-tenant
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-products-service
  namespace: namespace-y
spec:
  selector:
    app: skripsi-products
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-wishlist-service
  namespace: namespace-y
spec:
  selector:
    app: skripsi-wishlist
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004

---
apiVersion: v1
kind: Service
metadata:
  name: skripsi-orders-service
  namespace: namespace-y
spec:
  selector:
    app: skripsi-orders
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
